drupaldeploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: drupal
  labels:
    app: drupal
spec:
  ports:
    - port: 80
  selector:
    app: drupal
    tier: frontend
  type: ClusterIP
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: drupal
  labels:
    app: drupal
spec:
  replicas: 3
  selector:
    matchLabels:
      app: drupal
      tier: frontend
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: drupal
        tier: frontend
    spec:
      containers:
      - image: drupal:8-apache
        name: drupal
        ports:
        - containerPort: 80
          name: drupal
        volumeMounts:
            - name: drupal-persistent-storage
              mountPath: /var/www/html/modules
            - name: drupal-persistent-storage
              mountPath: /var/www/html/profiles
            - name: drupal-persistent-storage
              mountPath: /var/www/html/sites    
            - name: drupal-persistent-storage
              mountPath: /var/www/html/themes
      volumes:
      - name: drupal-persistent-storage
        persistentVolumeClaim:
          claimName: eks-drupa
